# streaming-crypto

./: .gitignore  Cargo.toml  LICENSE  README.md
core-api/: Cargo.toml  README.md
core-api/benches/: bench_aead_variants.rs  bench_digest_variants.rs  bench_file_2_file.rs  bench_frame_worker.rs  bench_frame_workers.rs  bench_io_throughput.rs  bench_memory_2_memory.rs  bench_memory_variants.rs  bench_parallelism.rs  bench_segment_sizes.rs  bench_segment_workers.rs
core-api/examples/: bench_dummy.rs  bench_v2_file.rs  bench_v2_memory.rs  bench_v2_reader.rs
core-api/examples/v2/: bench_file.rs  bench_memory.rs  bench_reader.rs
core-api/examples/v3/: bench_file.rs  bench_memory.rs  bench_reader.rs
core-api/src/: constants.rs  lib.rs  types.rs  utils.rs
core-api/src/benchmarks/: bench_metadata.rs  bench_persists.rs  bench_results.rs  bench_runner.rs  bench_summary.rs  bench_utils.rs  bench_v2_decrypt_file.rs  bench_v2_decrypt_memory.rs  bench_v2_decrypt_reader.rs  bench_v2_encrypt_file.rs  bench_v2_encrypt_memory.rs  bench_v2_encrypt_reader.rs  mod.rs
core-api/src/compression/: compression.md  mod.rs  registry.rs  stream.rs  types.rs
core-api/src/crypto/: aad.rs  aead.rs  crypto.md  digest.md  digest.rs  kdf.md  kdf.rs  mod.rs  nonce.rs  types.rs
core-api/src/headers/: decode.rs  encode.rs  headers.md  mod.rs  types.rs
core-api/src/parallelism/: mod.rs  policy.rs  profiles.rs  scheduler.rs
core-api/src/recovery/: bootstrap.rs  checkpoint.rs  mod.rs  persist.rs  recovery.md  resume.rs
core-api/src/scheduler/: mod.rs  policy.rs
core-api/src/stream/: core.rs  io.rs  mod.rs
core-api/src/stream_v2/: core.rs  io.md  io.rs  mod.rs  parallelism.md  parallelism.rs
core-api/src/stream_v3/: core.rs
core-api/src/telemetry/: counters.rs  mod.rs  snapshot.rs  telemetry.md  timers.rs
core-api/src/v2/: mod.rs  z1. stream_v2.md
core-api/src/v3/: z1. stream_v3.md
core-api/tests/: test_aead.rs  test_compression.rs  test_core.rs  test_digest.rs  test_frame_worker.rs  test_framing.rs  test_header.rs  test_kdf.rs  test_log.rs  test_pipeline.rs  test_scheduler.rs  test_segment_performance.rs  test_segment_worker.rs  test_segment_worker_counters.rs  test_telemetry.rs  test_telemetry_pipeline.rs  test_telemetry_segment.rs  test_worker.rs
core-api/tests/public_api/: test_compression_cipher_variants.rs  test_corrupt_detection.rs  test_header_meta.rs  test_input_variants.rs  test_output_variants.rs  test_parallelism_profiles.rs  test_public_api.rs  test_roundtrip.rs  test_telemetry_config.rs
core-api/tests/v2/: test_core.rs  test_frame_worker.rs  test_pipeline.rs  test_segment_performance.rs  test_segment_worker.rs  test_segment_worker_counters.rs  test_telemetry_pipeline.rs  test_telemetry_segment.rs  test_worker.rs
core-api/tests/v2_public/: test_compression_cipher_variants.rs  test_corrupt_detection.rs  test_header_meta.rs  test_input_variants.rs  test_output_variants.rs  test_parallelism_profiles.rs  test_public_api.rs  test_roundtrip.rs  test_telemetry_config.rs
core-api/tests/v3/: test_core.rs  test_frame_worker.rs  test_pipeline.rs  test_segment_performance.rs  test_segment_worker.rs  test_segment_worker_counters.rs  test_telemetry_pipeline.rs  test_telemetry_segment.rs  test_worker.rs
core-api/tests/v3_public/: mod.rs  test_compression_cipher_variants.rs  test_corrupt_detection.rs  test_header_meta.rs  test_input_variants.rs  test_output_variants.rs  test_parallelism_profiles.rs  test_public_api.rs  test_roundtrip.rs  test_telemetry_config.rs
core-v2/: Cargo.toml
core-v2/benches/: bench_digest_variants.rs  bench_file_2_file.rs  bench_frame_worker.rs  bench_frame_workers.rs  bench_io_throughput.rs  bench_memory_2_memory.rs  bench_parallelism.rs  bench_segment_sizes.rs  bench_segment_workers.rs
core-v2/examples/v2/: bench_file.rs  bench_memory.rs  bench_reader.rs
core-v2/src/: lib.rs
core-v2/src/benchmarks/: mod.rs
core-v2/src/stream_v2/: core.rs
core-v2/tests/v2/: test_core.rs  test_frame_worker.rs  test_pipeline.rs  test_segment_performance.rs  test_segment_worker.rs  test_segment_worker_counters.rs  test_telemetry_pipeline.rs  test_telemetry_segment.rs  test_worker.rs
core-v2/tests/v2_public/: test_compression_cipher_variants.rs  test_corrupt_detection.rs  test_header_meta.rs  test_input_variants.rs  test_output_variants.rs  test_parallelism_profiles.rs  test_public_api.rs  test_roundtrip.rs  test_telemetry_config.rs
core-v3/: Cargo.toml
core-v3/benches/: bench_digest_variants.rs  bench_file_2_file.rs  bench_frame_worker.rs  bench_frame_workers.rs  bench_io_throughput.rs  bench_memory_2_memory.rs  bench_parallelism.rs  bench_segment_sizes.rs
core-v3/examples/v3/: bench_file.rs  bench_memory.rs  bench_reader.rs
core-v3/src/: lib.rs
core-v3/src/benchmarks/: mod.rs
core-v3/src/stream_v3/: core.rs  mod.rs
core-v3/tests/v3/: mod.rs  test_core.rs  test_frame_worker.rs  test_pipeline.rs  test_segment_performance.rs  test_segment_worker.rs  test_segment_worker_counters.rs  test_telemetry_pipeline.rs  test_telemetry_segment.rs  test_worker.rs
core-v3/tests/v3_public/: test_compression_cipher_variants.rs  test_corrupt_detection.rs  test_header_meta.rs  test_input_variants.rs  test_output_variants.rs  test_parallelism_profiles.rs  test_public_api.rs  (+2 more)
pyo3-api/: Cargo.toml  README.md  pyproject.toml
pyo3-api/src/: constants.rs  crypto.rs  errors.md  errors.rs  frames.rs  headers.rs  lib.rs  parallelism.rs  segments.rs  telemetry.rs
pyo3-v2/: Cargo.toml
pyo3-v2/src/: lib.rs
streaming-crypto/: Cargo.publish.dependencies  Cargo.publish.features  Cargo.toml  README.md  pyproject.toml
streaming-crypto/src/: ffi.rs  lib.rs  py.rs
streaming-crypto/streaming_crypto/: __init__.py  __init__.pyi  api.py  api.pyi  constants.py  constants.pyi  crypto.py  crypto.pyi  errors.py  errors.pyi  frames.py  frames.pyi  headers.py  headers.pyi  io.py  io.pyi  parallelism.py  parallelism.pyi  segments.py  segments.pyi  telemetry.py  telemetry.pyi  v2.py  v2.pyi  v3.py  v3.pyi
streaming-crypto/tests/: core_api.rs  ffi_api.rs  pyo3_api.rs
(+239 files in other folders)
