[package]
name    = "core-api"
version = "0.1.0"
edition = "2021"
publish = false

[features]
cuda    = ["cudarc"]      # CUDA backend
metal   = ["wgpu"]        # WGPU backend
opencl  = ["opencl3"]     # OpenCL backend

[dependencies]
# Features Gated
cudarc       = { version = "0.18", optional = true, features = ["cuda-version-from-build-system"] }
wgpu         = { version = "28.0", optional = true, features = [] }
opencl3      = { version = "0.12", optional = true, features = [] }

# Compression
flate2.workspace = true
lz4_flex.workspace = true
zstd.workspace = true

# Crypto
aes-gcm.workspace = true
chacha20poly1305.workspace = true

blake3.workspace = true
hkdf.workspace = true
sha2.workspace = true
sha3.workspace = true
digest.workspace = true

# Concurrency (core-safe)
crossbeam.workspace = true

# Utilities
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bincode.workspace = true
bitflags.workspace = true
byteorder.workspace = true
bytes.workspace = true
chrono.workspace = true
crc32fast.workspace = true
futures.workspace = true
hex.workspace = true
hybrid-array.workspace = true
num_cpus.workspace = true
num_enum.workspace = true
pollster.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
# 📦 Property‑Based Tests
proptest.workspace = true
tempfile.workspace = true

# 📦 Public API Tests
[[test]]
name = "public_api"
path = "tests/public_api/mod.rs"
[[test]]
name = "test_public_api"
path = "tests/public_api/test_public_api.rs"
[[test]]
name = "test_roundtrip"
path = "tests/public_api/test_roundtrip.rs"
[[test]]
name = "test_input_variants"
path = "tests/public_api/test_input_variants.rs"
[[test]]
name = "test_output_variants"
path = "tests/public_api/test_output_variants.rs"
[[test]]
name = "test_header_meta"
path = "tests/public_api/test_header_meta.rs"
[[test]]
name = "test_corrupt_detection"
path = "tests/public_api/test_corrupt_detection.rs"
[[test]]
name = "test_parallelism_profiles"
path = "tests/public_api/test_parallelism_profiles.rs"
[[test]]
name = "test_telemetry_config"
path = "tests/public_api/test_telemetry_config.rs"
[[test]]
name = "test_compression_cipher_variants"
path = "tests/public_api/test_compression_cipher_variants.rs"
