[package]
name        = "streaming-crypto"
# GITHUB BUILD   TAG: b0.1.0-beta.3-core.0, b0.1.0-beta.3-ffi.0, b0.1.0-beta.3-pyo3.0
# GITHUB PUBLISH TAG: v0.1.0-beta.3-crates.0, v0.1.0-beta.3-pypi.0
version     = "0.1.0-beta.3"
edition     = "2021"
license     = "MIT"
description = "Cryptographic library with optional FFI and Python bindings"
repository  = "https://github.com/DreamzIt02/streaming-crypto"
keywords    = ["crypto", "ffi", "rust", "python", "bindings"]
categories  = ["cryptography", "api-bindings"]

[features] 
# --- FEATURES DYNAMIC START ---
# This block will be replaced with Publish Block, content from Cargo.publish.features
# Any common features for development and publish must be added at the end of this block
default     = ["core-api"]
core-api    = ["dep:core-api"]
ffi-api     = ["dep:ffi-api"]
pyo3-api    = ["dep:pyo3-api", "pyo3"]
# --- FEATURES DYNAMIC END ---

[dependencies]
# --- DEPENDENCIES DYNAMIC START ---
# This block will be replaced with Publish Block, content from Cargo.publish.dependencies
# Any common dependencies for development and publish must be added at the end of this block
core-api    = { path = "../core-api", optional = true }
ffi-api     = { path = "../ffi-api",  optional = true }
pyo3-api    = { path = "../pyo3-api", optional = true }

pyo3        = { version = "0.22", features = ["auto-initialize"], optional = true }
# --- DEPENDENCIES DYNAMIC END ---

[dev-dependencies]
# 📦 Property‑Based Tests
proptest.workspace = true
tempfile.workspace = true

[lib]
name        = "streaming_crypto"
crate-type  = ["rlib", "cdylib"]

# 📦 Public API Tests
[[test]]
name = "public_api"
path = "tests/core_api/mod.rs"
