[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "streaming-crypto"
dynamic = ["version"]  # ignored by maturin (taken from Cargo.toml)
description = "High-performance streaming encryption library powered by Rust"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Engr. Rejwanul Islam" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.maturin]
features = ["pyo3-api"]
strip = true