[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "streaming-crypto"
dynamic = ["version"]  # ignored by maturin (taken from Cargo.toml)
description = "High-performance streaming encryption library powered by Rust"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Engr. Rejwanul Islam" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.maturin]
features = ["pyo3-api"]
strip = true
include = [
    "streaming_crypto/__init__.py",
    "streaming_crypto/__init__.pyi",
    "streaming_crypto/py.typed",

    "streaming_crypto/constants.py",
    "streaming_crypto/constants.pyi",

    "streaming_crypto/crypto.py",
    "streaming_crypto/crypto.pyi",

    "streaming_crypto/errors.py",
    "streaming_crypto/errors.pyi",

    "streaming_crypto/headers.py",
    "streaming_crypto/headers.pyi",
    
    "streaming_crypto/parallelism.py",
    "streaming_crypto/parallelism.pyi",

    "streaming_crypto/telemetry.py",
    "streaming_crypto/telemetry.pyi",

    "streaming_crypto/io.py",
    "streaming_crypto/io.pyi",

    "streaming_crypto/api.py",
    "streaming_crypto/api.pyi",
]